Fix the qtpath issue with lto enabled

Move qtconfManualPath pointer to the unnamed namespace, so it's never
exported. Add the static setQtconfManualPath method that sets the
pointer at runtime.

Fixes: QTBUG-122739
Pick-to: 6.6 6.5
Change-Id: Icfc631f9680ad5f484920b0fdf3e408b7657c108
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit bdb2f20154c1fa1f0962a46a22afdee453a2db1e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>